<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>restDemo</groupId>
	<artifactId>RestAssured</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>RestAssuredDemo</name>
	<description>a Sample Project on REST Assured API</description>
	<dependencies>
		<!-- Selenium -->
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>4.20.0</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.groovy</groupId>
			<artifactId>groovy</artifactId>
			<version>3.0.21</version>
		</dependency>

		<!-- Cucumber Dependency -->
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>7.13.0</version>
		</dependency>
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>7.13.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-core</artifactId>
			<version>7.13.0</version>
		</dependency>
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-picocontainer</artifactId>
			<version>7.13.0</version>
		</dependency>
		<!-- JUnit	-->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.7.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.7.0</version>
			<scope>test</scope>
		</dependency>
		<!-- REST Assured -->
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>rest-assured</artifactId>
			<version>5.4.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>json-path</artifactId>
			<version>5.4.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>xml-path</artifactId>
			<version>5.4.0</version>
			<scope>test</scope>
		</dependency>
	

		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>7.10.1</version>
			<scope>test</scope>
		</dependency>

		<!-- JSON -->
		<!--dependency> <groupId>org.json</groupId> <artifactId>json</artifactId> 
			<version>20230618</version> </dependency -->

		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20180813</version>
		</dependency>
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>json-schema-validator</artifactId>
			<version>5.4.0</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.8</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.17.0</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.17.0</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-xml</artifactId>
			<version>2.17.0</version>
		</dependency>
		<!-- Reports -->
		<dependency>
			<groupId>com.aventstack</groupId>
			<artifactId>extentreports</artifactId>
			<version>5.0.9</version>
		</dependency>
		<dependency>
			<groupId>com.vimalselvam</groupId>
			<artifactId>cucumber-extentsreport</artifactId>
			<version>3.1.1</version>
		</dependency>
		<dependency>
			<groupId>tech.grasshopper</groupId>
			<artifactId>extentreports-cucumber7-adapter</artifactId>
			<version>1.13.0</version>
		</dependency>
		<!-- -->
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-core</artifactId>
			<version>2.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>gherkin</artifactId>
			<version>26.2.0</version>
		</dependency>
		<dependency>
			<groupId>tech.grasshopper</groupId>
			<artifactId>extentreports-cucumber6-adapter</artifactId>
			<version>1.2.0</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.24</version> <!-- Use the latest version available -->
			<scope>provided</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<source>11</source>
					<target>11</target>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>1.18.24</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<includes>
						<include>**/*Test.java</include>
					</includes>
					<systemPropertyVariables>
						<cucumber.options>--plugin pretty --glue
							src/test/java/com
							src/test/resources/features</cucumber.options>
					</systemPropertyVariables>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<compilerArgs>
						<arg>--add-exports</arg>
						<arg>jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
						<arg>--add-exports</arg>
						<arg>jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
						<arg>--add-exports</arg>
						<arg>jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
						<arg>--add-exports</arg>
						<arg>jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
						<arg>--add-exports</arg>
						<arg>jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
						<arg>--add-exports</arg>
						<arg>jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
						<arg>--add-exports</arg>
						<arg>jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
						<arg>--add-exports</arg>
						<arg>
							jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
						<arg>--add-exports</arg>
						<arg>jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
						<arg>--add-exports</arg>
						<arg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
					</compilerArgs>
					<source>11</source> <!-- or the version of your JDK -->
					<target>11</target> <!-- or the version of your JDK -->
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>